<resources>
    <string name="app_name">Calendar</string>

    <string name="action_settings">Your information</string>
    <string name="birthday">MY BIRTHDAY</string>
    <string name="name">Name</string>
    <string name="dateofbirth">Date of birth (mm.dd):</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Save">Save</string>
    <string name="Reset">Reset</string>
</resources>
