<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"

        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"

            android:id="@+id/level2"
            android:layout_centerHorizontal="true">

            <Button
                android:textColor="#f8f7f7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/karacsony"
                android:layout_marginTop="10dp"
                android:background="@drawable/christmas_tree"
                />
            <Button
                android:text="@string/birthday"
                android:textColor="#f8f7f7"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/szulinap"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/name"
            />

        <EditText
            android:textColor="#ec0505"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:maxLength="10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/dateofbirth"
            />

        <EditText
            android:textColor="#ec0505"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthday"
            android:layout_marginTop="15dp"
            android:maxLength="5"
            android:inputType="date"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/Gender"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/radio0"
            android:text="@string/Male"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:text="@string/Female"/>
        </RadioGroup>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    android:id="@+id/level2"
    android:layout_centerHorizontal="true">

    <Button
        android:textColor="#f8f7f7"
        android:text="@string/Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        />

    <Button
        android:textColor="#f8f7f7"
        android:text="@string/Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        />
</LinearLayout>
    </LinearLayout>

</RelativeLayout>
